--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="choice mode">
                     <select id="mode">
                         <option value="compare">&amp;</option>
-                        <option value="ratio">w proporcji do</option>
+                        <option value="ratio">÷</option>
                     </select>
                 </div>
                 <div class="choice">
