--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <link href="./assets/style.css" rel="stylesheet">
-	<script src="./assets/script.js"></script>
+    <link href="./assets/style.css?v=1" rel="stylesheet">
+	<script src="./assets/script.js?v=1"></script>
 </head>
 <body>
     <div id="main">
