feat(charts): sum and difference

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 					<select id="mode">
 						<option value="compare">&amp;</option>
 						<option value="ratio">÷</option>
+						<option value="difference">-</option>
+						<option value="sum">+</option>
 					</select>
 				</div>
 				<div class="choice">
