--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>🖨 💰 Złoty Go Brrrr 💰 🖨</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="./assets/icon.png?v=4">
 
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-	<link href="./assets/style.css?v=3" rel="stylesheet">
-	<script src="./assets/script.js?v=3"></script>
+	<link href="./assets/style.css?v=4" rel="stylesheet">
+	<script src="./assets/script.js?v=4"></script>
 	<script>
 		setup([
 			"pl-avg-square-meter-apartment-price.json",
@@ -17,7 +18,7 @@
 			"pl-gdp-per-capita.json",
 			"pl-inflation.json",
 			"pl-electricity-price.json"
-		].map(url => `${url}?v=3`));
+		].map(url => `${url}?v=4`));
 	</script>
 </head>
 <body>
@@ -52,7 +53,7 @@
 
 		<footer id="footer">
 			<div class="row data-source">
-				source: <span id="data-sources"></span>
+				source:<span id="data-sources"></span>
 			</div>
 			<div class="row credits">
 				by <a href="https://twitter.com/b4rtaz">b4rtaz</a> &mdash;
