--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			"pl-avg-euro-diesel.json",
 			"pl-gdp-per-capita.json",
 			"pl-inflation.json",
-			"pl-electricity-price.json"
+			"pl-electricity-price.json",
+			"pl-big-mac-price.json"
 		].map(url => `${url}?v=7`));
 	</script>
 </head>
