--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html dir="ltr" lang="pl">
 <head>
 	<meta charset="UTF-8">
-	<title>🖨 💰 Złoty Go Brrrr 💰 🖨</title>
+	<title>Złoty Go Brrrr</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="./assets/icon.png?v=5">
+	<meta name="description" content="Polish Złoty Go Brrrrrrrrrrrrrrrrrrrrrrr">
+	<meta property="og:title" content="Złoty Go Brrrr" />
+	<meta property="og:description" content="Polish Złoty Go Brrrrrrrrrrrrrrrrrrrrrrr" />
 
+	<link rel="shortcut icon" href="./assets/icon.png?v=5">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
 	<link href="./assets/style.css?v=7" rel="stylesheet">
 	<script src="./assets/script.js?v=7"></script>
@@ -26,7 +29,7 @@
 	<div id="main">
 		<header id="header">
 			<div class="title">
-				<h1>🖨 💰 Złoty Go Brrrr 💰 🖨</h1>
+				<h1>Złoty Go Brrrr</h1>
 			</div>
 			<div class="selector">
 				<div class="choice">
