--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			"pl-gdp-per-capita.json",
 			"pl-inflation.json",
 			"pl-electricity-price.json",
-			"pl-big-mac-price.json"
+			"pl-big-mac-price.json",
+			"pl-wig-price.json"
 		].map(url => `${url}?v=8`));
 	</script>
 </head>
