1k PLN from the year 2000.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<link rel="shortcut icon" href="./assets/icon.png?v=5">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-	<link href="./assets/style.css?v=8" rel="stylesheet">
-	<script src="./assets/script.js?v=8"></script>
+	<link href="./assets/style.css?v=9" rel="stylesheet">
+	<script src="./assets/script.js?v=9"></script>
 	<script>
 		setup([
 			"pl-avg-square-meter-apartment-price.json",
@@ -20,10 +20,12 @@
 			"pl-avg-euro-diesel.json",
 			"pl-gdp-per-capita.json",
 			"pl-inflation.json",
+			"pl-inflation-1k-up.json",
+			"pl-inflation-1k-down.json",
 			"pl-electricity-price.json",
 			"pl-big-mac-price.json",
 			"pl-wig-price.json"
-		].map(url => `${url}?v=8`));
+		].map(url => `${url}?v=9`));
 	</script>
 </head>
 <body>
